ajouter des icônes aux boutons de navigation

--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
             <div class="btn">
                 <input type="submit" formaction="#" value="Explorer nos restaurants" class="accueil__btn">
             </div>
-            <nav>
-                <div class="titre"><h2>Foctionnement</h2></div>
-                <div><i class="fa-solid fa-1"></i><button class="nav__btn"><i class="fa-solid fa-mobile-screen-button"></i><span>choisissez un restaurant</span></button></div>
-                <div><i class="fa-solid fa-2"></i><button class="nav__btn"><i class="fa-solid fa-list-ul"></i><span>choisissez un restaurant</span></button></div>
-                <div><i class="fa-solid fa-3"></i><button class="nav__btn"><i class="fa-solid fa-store"></i><span>choisissez un restaurant</span></button> </div>
-            </nav>
         </div>    
     </header>
+    <nav>
+        <div class="nav"></div>
+            <div class="titre"><h2>Foctionnement</h2></div>
+            <div><i class="fa-solid fa-1 nav__btn--i"></i><button class="nav__btn"><i class="fa-solid fa-mobile-screen-button nav__btn--icon"></i><span>choisissez un restaurant</span></button></div>
+            <div><i class="fa-solid fa-2 nav__btn--i"></i><button class="nav__btn"><i class="fa-solid fa-list-ul nav__btn--icon"></i><span>choisissez un restaurant</span></button></div>
+            <div><i class="fa-solid fa-3 nav__btn--i"></i><button class="nav__btn"><i class="fa-solid fa-store nav__btn--icon"></i><span>choisissez un restaurant</span></button> </div>
+     </div>
+    </nav>
     <section>
         <div class="container-card">
             <div class="titre"><h2>Restaurants</h2></div>
