--- a/index.html
+++ b/index.html
@@ -29,62 +29,60 @@
     </header>
     <nav>
         <div class="nav"></div>
-            <div class="titre"><h2>Foctionnement</h2></div>
-            <div><i class="fa-solid fa-1 nav__btn--i"></i><button class="nav__btn"><i class="fa-solid fa-mobile-screen-button nav__btn--icon"></i><span>choisissez un restaurant</span></button></div>
-            <div><i class="fa-solid fa-2 nav__btn--i"></i><button class="nav__btn"><i class="fa-solid fa-list-ul nav__btn--icon"></i><span>choisissez un restaurant</span></button></div>
-            <div><i class="fa-solid fa-3 nav__btn--i"></i><button class="nav__btn"><i class="fa-solid fa-store nav__btn--icon"></i><span>choisissez un restaurant</span></button> </div>
+            <div class="nav__titre"><h2>Foctionnement</h2></div>
+            <div class="--nav"><i class="fa-solid fa-1 nav__btn--i"></i><button class="nav__btn"><i class="fa-solid fa-mobile-screen-button nav__btn--icon"></i><span>choisissez un restaurant</span></button></div>
+            <div class="--nav"><i class="fa-solid fa-2 nav__btn--i"></i><button class="nav__btn"><i class="fa-solid fa-list-ul nav__btn--icon"></i><span>choisissez un restaurant</span></button></div>
+            <div class="--nav"><i class="fa-solid fa-3 nav__btn--i"></i><button class="nav__btn"><i class="fa-solid fa-store nav__btn--icon"></i><span>choisissez un restaurant</span></button> </div>
      </div>
     </nav>
     <section>
         <div class="container-card">
-            <div class="titre"><h2>Restaurants</h2></div>
+            <div id="rest" class="container-card__titre"><h2>Restaurants</h2></div>
             <div class="card-rest">
-                <a href="#" >
-                    <img src="imagen/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"alt="imagen La palette du goût">
+                <a href="menugout.html" >
+                    <div class="card-rest__image"><img src="imagen/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"alt="imagen La palette du goût"></div>
                     <div class="cardbody">
                         <div class="titre">
                             <h2>La palette du goût</h2>
                             <p class="text">Menilmontant</p>                            
-                        </div>
-                        <div class="icon"><i class="fa-regular fa-heart"></i></div>                    
-                    </div>
-                </a>
+                        </div></a> 
+                        <div class="icon"><i class="fa-regular fa-heart"></i></div>
+                    </div>    
             </div>
+
             <div class="card-rest">
                 <a href="#">
-                    <img src="imagen/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="imagen La note enchantée">
+                    <div class="card-rest__image"><img src="imagen/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="imagen La note enchantée"></div>
                     <div class="cardbody">
                         <div>
                             <h2>La note enchantée</h2>
                             <p class="text">Charonne</p>
-                        </div>                    
-                        <div class="incon-h"><i class="fa-regular fa-heart"></i></div>
+                        </div></a>
+                        <div class="icon"><i class="fa-regular fa-heart"></i></div>
                     </div>
-                </a>
             </div>
+
             <div class="card-rest">
                 <a href="#">
-                    <img src="imagen/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="imagen À la française">
+                    <div class="card-rest__image"><img src="imagen/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="imagen À la française"></div>
                     <div class="cardbody">
                         <div class="titre">
                             <h2>À la française</h2>
                             <p class="text">Cite Rouge</p>
-                        </div>                    
-                        <div><i class="fa-regular fa-heart"></i></div>
+                        </div></a>                    
+                        <div class="icon"><i class="fa-regular fa-heart"></i></div>
                     </div>
-                </a>
             </div>
             <div class="card-rest">
                 <a href="#">
-                    <img src="imagen/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="imagen délice des sens" >
+                   <div class="card-rest__image"><img src="imagen/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="imagen délice des sens" ></div>
                     <div class="cardbody">
                         <div class="titre">
                             <h2>Le délice des sens</h2>
                             <p class="text">Folie-Mericourt</p>
-                        </div>                   
-                        <div><i class="fa-regular fa-heart"></i></div>
+                        </div></a>                   
+                        <div class="icon"><i class="fa-regular fa-heart"></i></div>
                     </div>
-                </a>
             </div>
         </div>
     </section>
