--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <h2>La palette du goût</h2>
                             <p class="text">Menilmontant</p>                            
                         </div></a> 
-                        <div class="icon"><i class="fa-regular fa-heart"></i></div>
+                        <div class="icon"><i class="fa-solid fa-heart"></i></div>
                     </div>    
             </div>
 
@@ -58,7 +58,7 @@
                             <h2>La note enchantée</h2>
                             <p class="text">Charonne</p>
                         </div></a>
-                        <div class="icon"><i class="fa-regular fa-heart"></i></div>
+                        <div class="icon"><i class="fa-solid fa-heart"></i></div>
                     </div>
             </div>
 
@@ -70,7 +70,7 @@
                             <h2>À la française</h2>
                             <p class="text">Cite Rouge</p>
                         </div></a>                    
-                        <div class="icon"><i class="fa-regular fa-heart"></i></div>
+                        <div class="icon"><i class="fa-solid fa-heart"></i></div>
                     </div>
             </div>
             <div class="card-rest">
@@ -81,7 +81,9 @@
                             <h2>Le délice des sens</h2>
                             <p class="text">Folie-Mericourt</p>
                         </div></a>                   
-                        <div class="icon"><i class="fa-regular fa-heart"></i></div>
+                        
+                        <div class="icon"><i class="fa-solid fa-heart"></i></div>
+                        
                     </div>
             </div>
         </div>
