--- a/menugout.html
+++ b/menugout.html
@@ -18,7 +18,14 @@
     </header>
     <section>
         <div class="rest-cart">
-            <div class="rest-cart__name"><h2>La palette du goût</h2><i class="fa-regular fa-heart"></i></div>
+            <div class="rest-cart__name">
+                <div class="titre-rest"><h2>La palette du goût</h2></div>
+                <div class="ico"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <g class="iconaso">
+                    <path d="M0 190.9V185.1C0 115.2 50.52 55.58 119.4 44.1C164.1 36.51 211.4 51.37 244 84.02L256 96L267.1 84.02C300.6 51.37 347 36.51 392.6 44.1C461.5 55.58 512 115.2 512 185.1V190.9C512 232.4 494.8 272.1 464.4 300.4L283.7 469.1C276.2 476.1 266.3 480 256 480C245.7 480 235.8 476.1 228.3 469.1L47.59 300.4C17.23 272.1 .0003 232.4 .0003 190.9L0 190.9z"/>
+                    </g></svg>
+                </div>
+            </div>
             <div class="restaurant">
                 <div class="t-cart"><h2>ENTRÉES</h2></div>
                 <div class="rest-btn" ><button class="btn-rest"><h2>Fricassée d'escargot</h2><p> Au piment d'Espelette <span>25€</span></p></button></div>
