Apparition progressive en menugout.html version 1

--- a/menugout.html
+++ b/menugout.html
@@ -21,30 +21,30 @@
             <div class="rest-cart__name">
                 <div class="titre-rest"><h2>La palette du goût</h2></div>
                 <div class="ico"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <g class="iconaso">
+                    <g class="icon-svg">
                     <path d="M0 190.9V185.1C0 115.2 50.52 55.58 119.4 44.1C164.1 36.51 211.4 51.37 244 84.02L256 96L267.1 84.02C300.6 51.37 347 36.51 392.6 44.1C461.5 55.58 512 115.2 512 185.1V190.9C512 232.4 494.8 272.1 464.4 300.4L283.7 469.1C276.2 476.1 266.3 480 256 480C245.7 480 235.8 476.1 228.3 469.1L47.59 300.4C17.23 272.1 .0003 232.4 .0003 190.9L0 190.9z"/>
                     </g></svg>
                 </div>
             </div>
             <div class="restaurant">
-                <div class="t-cart"><h2>ENTRÉES</h2></div>
-                <div class="rest-btn" ><button class="btn-rest"><h2>Fricassée d'escargot</h2><p> Au piment d'Espelette <span>25€</span></p></button></div>
-                <div class="rest-btn" ><button class="btn-rest"><h2>Foie gras de canard mi-cuit</h2><p>Et ses copeaux de truffe noire <span>35€</span></p></button></div>
-                <div class="rest-btn" ><button class="btn-rest"><h2>Oeuf au plat</h2><p> Assaisonné à la truffe sur lit de caviar <span>20€</span></p></button></div>
+                <div class="t-cart --efect-btn "><h2>ENTRÉES</h2></div>
+                <div class="rest-btn --efect-btn" ><button class="btn-rest"><h2>Fricassée d'escargot</h2><p> Au piment d'Espelette <span>25€</span></p></button></div>
+                <div class="rest-btn --efect-btn" ><button class="btn-rest"><h2>Foie gras de canard mi-cuit</h2><p>Et ses copeaux de truffe noire <span>35€</span></p></button></div>
+                <div class="rest-btn --efect-btn" ><button class="btn-rest"><h2>Oeuf au plat</h2><p> Assaisonné à la truffe sur lit de caviar <span>20€</span></p></button></div>
             </div>
             <div class="restaurant">
-                <div class="t-cart"><h2>PLATS</h2></div>
-                <div class="rest-btn" ><button class="btn-rest"><h2>Filet de boeuf aux herbes</h2><p>Accompagné de sa ribambelle de légumes<span>40€ </span></p></button></div>
-                <div class="rest-btn" ><button class="btn-rest"><h2>Parmentier de queue de boeuf</h2><p>À la truffe noire sur sa purée de panais <span>35€</span></p></button></div>
-                <div class="rest-btn" ><button class="btn-rest"><h2>Filet de turbot</h2><p>Aux agrumes<span>44€</span></p></button></div>
+                <div class="t-cart --efect-btn"><h2>PLATS</h2></div>
+                <div class="rest-btn --efect-btn" ><button class="btn-rest"><h2>Filet de boeuf aux herbes</h2><p>Accompagné de sa ribambelle de légumes<span>40€ </span></p></button></div>
+                <div class="rest-btn --efect-btn" ><button class="btn-rest"><h2>Parmentier de queue de boeuf</h2><p>À la truffe noire sur sa purée de panais <span>35€</span></p></button></div>
+                <div class="rest-btn --efect-btn" ><button class="btn-rest"><h2>Filet de turbot</h2><p>Aux agrumes<span>44€</span></p></button></div>
             </div>  
             <div class="restaurant">
-                <div class="t-cart"><h2>DESSERTS</h2></div>
-                <div class="rest-btn"><button class="btn-rest"><h2>Paris-Brest</h2><p>Revisité<span>18€</span></p></button></div>
-                <div class="rest-btn"><button class="btn-rest"><h2>Macaron au chocolat d'exception</h2><p>Et glace à la vanille de Madagascar<span>22€</span></p></button></div>
-                <div class="rest-btn"><button class="btn-rest"><h2>Mousse au chocolat</h2><p>Au piment d'Espelette et à la truffe noire<span>23€</span></p></button></div>
+                <div class="t-cart --efect-btn"><h2>DESSERTS</h2></div>
+                <div class="rest-btn --efect-btn "><button class="btn-rest"><h2>Paris-Brest</h2><p>Revisité<span>18€</span></p></button></div>
+                <div class="rest-btn --efect-btn"><button class="btn-rest"><h2>Macaron au chocolat d'exception</h2><p>Et glace à la vanille de Madagascar<span>22€</span></p></button></div>
+                <div class="rest-btn --efect-btn"><button class="btn-rest"><h2>Mousse au chocolat</h2><p>Au piment d'Espelette et à la truffe noire<span>23€</span></p></button></div>
             </div>
-            <div class="btn restaurant--btn">
+            <div class="btn restaurant--btn --efect-btn">
                 <input type="submit" formaction="#" value="Commander" class="accueil__btn">
             </div>
         </div>
