--- a/menugout.html
+++ b/menugout.html
@@ -27,24 +27,24 @@
                 </div>
             </div>
             <div class="restaurant">
-                <div class="t-cart --efect-btn "><h2>ENTRÉES</h2></div>
-                <div class="rest-btn --efect-btn" ><button class="btn-rest"><h2>Fricassée d'escargot</h2><p> Au piment d'Espelette <span>25€</span></p></button></div>
-                <div class="rest-btn --efect-btn" ><button class="btn-rest"><h2>Foie gras de canard mi-cuit</h2><p>Et ses copeaux de truffe noire <span>35€</span></p></button></div>
-                <div class="rest-btn --efect-btn" ><button class="btn-rest"><h2>Oeuf au plat</h2><p> Assaisonné à la truffe sur lit de caviar <span>20€</span></p></button></div>
+                <div class="t-cart --efect-btn --efect-btn--1 "><h2>ENTRÉES</h2></div>
+                <div class="rest-btn --efect-btn --efect-btn--1" ><button class="btn-rest"><h2>Fricassée d'escargot</h2><p> Au piment d'Espelette <span>25€</span></p></button></div>
+                <div class="rest-btn --efect-btn --efect-btn--1" ><button class="btn-rest"><h2>Foie gras de canard mi-cuit</h2><p>Et ses copeaux de truffe noire <span>35€</span></p></button></div>
+                <div class="rest-btn --efect-btn --efect-btn--1" ><button class="btn-rest"><h2>Oeuf au plat</h2><p> Assaisonné à la truffe sur lit de caviar <span>20€</span></p></button></div>
             </div>
             <div class="restaurant">
-                <div class="t-cart --efect-btn"><h2>PLATS</h2></div>
-                <div class="rest-btn --efect-btn" ><button class="btn-rest"><h2>Filet de boeuf aux herbes</h2><p>Accompagné de sa ribambelle de légumes<span>40€ </span></p></button></div>
-                <div class="rest-btn --efect-btn" ><button class="btn-rest"><h2>Parmentier de queue de boeuf</h2><p>À la truffe noire sur sa purée de panais <span>35€</span></p></button></div>
-                <div class="rest-btn --efect-btn" ><button class="btn-rest"><h2>Filet de turbot</h2><p>Aux agrumes<span>44€</span></p></button></div>
+                <div class="t-cart --efect-btn --efect-btn--2"><h2>PLATS</h2></div>
+                <div class="rest-btn --efect-btn --efect-btn--2" ><button class="btn-rest"><h2>Filet de boeuf aux herbes</h2><p>Accompagné de sa ribambelle de légumes<span>40€ </span></p></button></div>
+                <div class="rest-btn --efect-btn --efect-btn--2" ><button class="btn-rest"><h2>Parmentier de queue de boeuf</h2><p>À la truffe noire sur sa purée de panais <span>35€</span></p></button></div>
+                <div class="rest-btn --efect-btn --efect-btn--2" ><button class="btn-rest"><h2>Filet de turbot</h2><p>Aux agrumes<span>44€</span></p></button></div>
             </div>  
             <div class="restaurant">
-                <div class="t-cart --efect-btn"><h2>DESSERTS</h2></div>
-                <div class="rest-btn --efect-btn "><button class="btn-rest"><h2>Paris-Brest</h2><p>Revisité<span>18€</span></p></button></div>
-                <div class="rest-btn --efect-btn"><button class="btn-rest"><h2>Macaron au chocolat d'exception</h2><p>Et glace à la vanille de Madagascar<span>22€</span></p></button></div>
-                <div class="rest-btn --efect-btn"><button class="btn-rest"><h2>Mousse au chocolat</h2><p>Au piment d'Espelette et à la truffe noire<span>23€</span></p></button></div>
+                <div class="t-cart --efect-btn --efect-btn--3"><h2>DESSERTS</h2></div>
+                <div class="rest-btn --efect-btn  --efect-btn--3"><button class="btn-rest"><h2>Paris-Brest</h2><p>Revisité<span>18€</span></p></button></div>
+                <div class="rest-btn --efect-btn --efect-btn--3"><button class="btn-rest"><h2>Macaron au chocolat d'exception</h2><p>Et glace à la vanille de Madagascar<span>22€</span></p></button></div>
+                <div class="rest-btn --efect-btn --efect-btn--3"><button class="btn-rest"><h2>Mousse au chocolat</h2><p>Au piment d'Espelette et à la truffe noire<span>23€</span></p></button></div>
             </div>
-            <div class="btn restaurant--btn --efect-btn">
+            <div class="btn restaurant--btn --efect-btn --efect-btn--3">
                 <input type="submit" formaction="#" value="Commander" class="accueil__btn">
             </div>
         </div>
