spinner pour index.html vertion1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <title>Ohmyfood</title>
 </head>
 <body>
-    <header>
+    
+    <div class="load"></div>   
+    
+    <header class="init">
         <div class="logo"><img src="imagen/logo/ohmyfood@2x.svg" alt="imagen logo"></div>
         <div class="accueil">
             <div class="accueil__location">
@@ -27,7 +30,7 @@
             </div>
         </div>    
     </header>
-    <nav>
+    <nav class="init">
         <div class="nav"></div>
             <div class="nav__titre"><h2>Foctionnement</h2></div>
             <div class="--nav"><i class="fa-solid fa-1 nav__btn--i"></i><button class="nav__btn"><i class="fa-solid fa-mobile-screen-button nav__btn--icon"></i><span>choisissez un restaurant</span></button></div>
@@ -35,7 +38,7 @@
             <div class="--nav"><i class="fa-solid fa-3 nav__btn--i"></i><button class="nav__btn"><i class="fa-solid fa-store nav__btn--icon"></i><span>choisissez un restaurant</span></button> </div>
      </div>
     </nav>
-    <section>
+    <section class="init">
         <div class="container-card">
             <div id="rest" class="container-card__titre"><h2>Restaurants</h2></div>
             <div class="card-rest">
@@ -102,7 +105,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer class="init">
         <div class="fpage --fpage">
             <div>
                 <div class="titre"><h2>ohmyfood</h2></div>
