changer styles.scss en main.scss, modifications de la page réponsive

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
     </section>
     <footer class="init">
-        <div class="fpage --fpage">
+        <div class="fpage">
             <div>
                 <div class="titre"><h2>ohmyfood</h2></div>
                 <div class="__links">
@@ -152,7 +152,7 @@
                         <li><div class="links"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></div></li>
                         <li><div class="links"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></div></li>
                         <li> <div class="links"><a href="#">Mentions Legales</a></div></li>
-                        <li><div class="links"><a  href="#">Contact</a></div></li>
+                        <li><div class="links"><a href="mailto:ohmyfood@example.com">Contact</a></div></li>
                     </ul>
                 </div>
             </div>
