--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/prefixed/style.css">
     <script src="https://kit.fontawesome.com/bd4cd0c7b6.js" crossorigin="anonymous"></script>
     <title>Ohmyfood</title>
 </head>
@@ -43,6 +43,7 @@
                     <div class="card-rest">
                             <a href="menugout.html" >
                                 <div class="card-rest__image"><img src="imagen/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="imagen La palette du goût"></div>
+                                <div class="nouveau"><p class="nouveau__p">Nouveau</p></div>   
                                     <div class="cardbody">
                                         <div class="titre">
                                             <h2>La palette du goût</h2>
@@ -72,9 +73,10 @@
                 
             
                     <div class="card-rest">
-                        <a href="menugout.html" >
+                        <a href="menuenchantee.html" >
                             <div class="card-rest__image"><img src="imagen/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="imagen La palette du goût"></div>
-                                <div class="cardbody">
+                            <div class="nouveau2"><p class="nouveau2__p">Nouveau</p></div>    
+                            <div class="cardbody">
                                     <div class="titre">
                                         <h2>La note enchantée</h2>
                                         <p class="text">Charonne</p>
@@ -95,7 +97,7 @@
                                 </div>
                     </div>    
                     <div class="card-rest">
-                        <a href="menugout.html" >
+                        <a href="menufrancaise.html" >
                             <div class="card-rest__image"><img src="imagen/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="imagen La palette du goût"></div>
                                 <div class="cardbody">
                                     <div class="titre">
@@ -118,7 +120,7 @@
                             </div>
                     </div>    
                     <div class="card-rest">
-                        <a href="menugout.html" >
+                        <a href="menusens.html" >
                             <div class="card-rest__image"><img src="imagen/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="imagen La palette du goût"></div>
                                 <div class="cardbody">
                                     <div class="titre">
