animation des trois points et emplacement des fichiers sass

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1>Réservez le menu qui vous convient</h1>
             </div>
             <div class="accueil__soustitre">
-                <h2>Decouvrez des restaurants d'exception, selectionnes par nos soins.</h2>
+                <h2>Decouvrez des restaurants d'exception, sélectionnés par nos soins.</h2>
             </div>
             <div class="btn">
                 <input type="submit" formaction="#" value="Explorer nos restaurants" class="accueil__btn">
@@ -74,7 +74,7 @@
             
                     <div class="card-rest">
                         <a href="menuenchantee.html" >
-                            <div class="card-rest__image"><img src="imagen/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="imagen La palette du goût"></div>
+                            <div class="card-rest__image"><img src="imagen/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="imagen restaurant la note enchantée"></div>
                             <div class="nouveau2"><p class="nouveau2__p">Nouveau</p></div>    
                             <div class="cardbody">
                                     <div class="titre">
@@ -97,8 +97,8 @@
                                 </div>
                     </div>    
                     <div class="card-rest">
-                        <a href="menufrancaise.html" >
-                            <div class="card-rest__image"><img src="imagen/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="imagen La palette du goût"></div>
+                        <a href="menufrançaise.html" >
+                            <div class="card-rest__image"><img src="imagen/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="imagen restaurant la française"></div>
                                 <div class="cardbody">
                                     <div class="titre">
                                         <h2>À la française</h2>
@@ -121,7 +121,7 @@
                     </div>    
                     <div class="card-rest">
                         <a href="menusens.html" >
-                            <div class="card-rest__image"><img src="imagen/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="imagen La palette du goût"></div>
+                            <div class="card-rest__image"><img src="imagen/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="imagen restaurant le délice des sens"></div>
                                 <div class="cardbody">
                                     <div class="titre">
                                         <h2>Le délice des sens</h2>
