--- a/menusens.html
+++ b/menusens.html
@@ -14,7 +14,7 @@
             <div class="btn-return"><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></div>
             <div class="logo"><img src="imagen/logo/ohmyfood@2x.svg" alt="imagen logo"></div>
         </div>
-        <div class="img-rest"><img src="imagen/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="imagen La palette du goût"></div>
+        <div class="img-rest"><img src="imagen/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="imagen restaurant Le délice des sens"></div>
     </header>
     <section>
         <div class="rest-cart">
@@ -69,7 +69,7 @@
                         <li><div class="links"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></div></li>
                         <li><div class="links"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></div></li>
                         <li> <div class="links"><a href="#">Mentions Legales</a></div></li>
-                        <li><div class="links"><a  href="#">Contact</a></div></li>
+                        <li><div class="links"><a   href="mailto:ohmyfood@example.com">Contact</a></div></li>
                     </ul>
                 </div>
             </div>
