--- a/menufrançaise.html
+++ b/menufrançaise.html
@@ -14,7 +14,7 @@
             <div class="btn-return"><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></div>
             <div class="logo"><img src="imagen/logo/ohmyfood@2x.svg" alt="imagen logo"></div>
         </div>
-        <div class="img-rest"><img src="imagen/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="imagen La palette du goût"></div>
+        <div class="img-rest"><img src="imagen/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="imagen restaurant la française"></div>
     </header>
     <section>
         <div class="rest-cart">
@@ -44,7 +44,7 @@
             <div class="t-cart c--efect-btn c--efect-btn--2"><h2>PLATS</h2></div>
             <div class="restaurant">
                 
-                <div class=" menu c--efect-btn c--efect-btn--2" ><button class="btn-rest"><span class="btn-rest__titre">Coquilles Saint-Jacques</span><span class="restaurant__p"><span class="p-cart">Accompagnées d'une purée de panais</span><span  class="restaurant__span cartalarga ">40€</span></span><i class="__check"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g><path d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"/></g></svg></i></button></div>
+                <div class=" menu c--efect-btn c--efect-btn--2" ><button class="btn-rest"><span class="btn-rest__titre">Coquilles Saint-Jacques</span><span class="restaurant__p"><span class="p-cart">Accompagnées d'une purée de panais</span><span  class="restaurant__span cart-large ">40€</span></span><i class="__check"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g><path d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"/></g></svg></i></button></div>
                 <div class=" menu c--efect-btn c--efect-btn--2" ><button class="btn-rest"><span class="btn-rest__titre">Magret de canard</span><span class="restaurant__p"><span class="p-cart">Et parmentier de pommes de terre</span><span  class="restaurant__span">35€</span></span><i class="__check"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g><path d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"/></g></svg></i></button></div>
                 <div class=" menu c--efect-btn c--efect-btn--2" ><button class="btn-rest"><span class="btn-rest__titre">Pigeonneau d’Ille-et-Vilaine</span><span class="restaurant__p"><span class="p-cart">Sur son lit de gnocchis aux  légumes</span><span  class="restaurant__span">44€</span></span><i class="__check"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g><path d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"/></g></svg></i></button></div>
             </div>  
@@ -69,7 +69,7 @@
                         <li><div class="links"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></div></li>
                         <li><div class="links"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></div></li>
                         <li> <div class="links"><a href="#">Mentions Legales</a></div></li>
-                        <li><div class="links"><a  href="#">Contact</a></div></li>
+                        <li><div class="links"><a   href="mailto:ohmyfood@example.com">Contact</a></div></li>
                     </ul>
                 </div>
             </div>
